<resources>
    <string name="app_name">assignment2_alfonso</string>
    <string name="BtnSearchTxt">Search</string>
    <string name="iptSearchHolder">Search a movie</string>
    <string name="login_title">Login</string>
    <string name="email_hint">email@example.com</string>
    <string name="password_hint">password</string>
    <string name="register_link">Register here</string>
    <string name="register_title">Register</string>
    <string name="Sing_Up">Sing up</string>
    <string name="username_hint">username</string>
    <string name="lbMovieTitle">Movie Title:</string>
    <string name="tvMovieTitle">Movie</string>
    <string name="lbDirector">Director Name:</string>
    <string name="tvDirector">Director</string>
    <string name="lbRating">Movie Rating:</string>
    <string name="tvRating">Rating</string>
    <string name="lbRelease">Release Year:</string>
    <string name="tvYear">Year</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="txtViewID">Movie id</string>
    <string name="movieID">movie id</string>
    <string name="back">\uf060</string>
    <string name="lbDuration">Runtime: 120 min</string>
    <string name="lbPlot">Movie plot goes here…</string>
    <string name="add_movie">\u002b</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="poster_url">Poster URL</string>
    <string name="save_movie">Save Movie</string>
    <string name="cancel">Cancel</string>
    <string name="logout">\uf2f5</string>
    <string name="no_movies_in_favorites">No movies in your favorites yet!</string>
    <string name="movie_icon">movie icon</string>
    <string name="click_the_plus">Click the + button to add movies to your favorites</string>

</resources>